# ieee754toy

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: IEEE754.h  NumericalParser.h
tests/: IEEE754Tests.h
